Updates from Overleaf

--- a/sec_ana.tex
+++ b/sec_ana.tex
@@ -80,7 +80,9 @@ where $Y_{\rm{LM}}(\Delta\varphi)$ is the measured per trigger yield from low-mu
 The fit determines the scale factor $F$, pedestal $G$, and $v_{n,n}$ and is performed in various high-multiplicity classes as well as in different $p_\mathrm{T,trig}$ and $p_\mathrm{T,assoc}$ intervals. 
 This method assumes that $Y_{\rm{LM}}$ does not contain a near-side-peak structure that would originate from jet fragmentation or near-side ridge.
 Further it is assumed that the shape of the away-side-peak structure remains the same when changing multiplicity class.
-The first assumption is ensured using the selected low-multiplicity template which doesn't have a strong near-side-peak structure compared to the studied higher multiplicity classes. The second assumption, which involves the modification of jet shapes, was tested by projecting the near-side jet peaks onto $\Delta\eta$. This projection did not reveal any strong dependence of the jet-peak shape on multiplicity class~\cite{LAKOMOV2017329}. However, the effect of the possible modification of the away-side jet yield on the result of the template fit was investigated by adjusting the away-side shape based on the observed differences between low- and high-multiplicity events. The effect on the extracted $v_2$ was found to be less than 1$\%$ in pp and p--Pb collisions for the kinematic selections used in this analysis. As for $v_3$, the maximum effect is about 3\% and 8$\%$ in pp and p--Pb collisions, respectively.  This modification of the jet shape is considered as one of the sources of systematic uncertainty and will be discussed in Sec.~\ref{sec:uncertainties}.
+The first assumption is ensured using the selected low-multiplicity template which doesn't have a strong near-side-peak structure compared to the studied higher multiplicity classes. The second assumption, which involves the modification of jet shapes, was tested by projecting the near-side jet peaks onto $\Delta\eta$. 
+%This projection did not reveal any strong dependence of the jet-peak shape on multiplicity class~\cite{LAKOMOV2017329}. However, 
+The effect of the possible modification of the away-side jet yield on the result of the template fit was investigated by adjusting the away-side shape based on the observed differences between low- and high-multiplicity events. The effect on the extracted $v_2$ was found to be less than 1$\%$ in pp and p--Pb collisions for the kinematic selections used in this analysis. As for $v_3$, the maximum effect is about 3\% and 8$\%$ in pp and p--Pb collisions, respectively.  This modification of the jet shape is considered as one of the sources of systematic uncertainty and will be discussed in Sec.~\ref{sec:uncertainties}.
 
 \begin{figure}[h!]
 	\centering
