--- a/paper.bib
+++ b/paper.bib
@@ -28,7 +28,7 @@
     volume = "741",
     pages = "38--50",
     year = "2015"
-}
+} 
 @article{Adams:2005dq,
 	title        = {{Experimental and theoretical challenges in the search for the quark gluon plasma: The STAR Collaboration's critical assessment of the evidence from RHIC collisions}},
 	author       = {Adams, John and others},
@@ -361,7 +361,7 @@
 	reportnumber = {CMS-HIN-16-010, CERN-EP-2016-147}
 }
 @article{Acharya:2019vdf,
-	title        = {{Investigations of Anisotropic Flow Using Multiparticle Azimuthal Correlations in pp, p--Pb, Xe-Xe, and Pb--Pb Collisions at the LHC}},
+	title        = {{Investigations of Anisotropic Flow Using Multiparticle Azimuthal Correlations in pp, p--Pb, Xe--Xe, and Pb--Pb Collisions at the LHC}},
 	author       = {Acharya, Shreyasi and others},
 	year         = 2019,
 	journal      = {Phys. Rev. Lett.},
@@ -552,7 +552,7 @@
 	reportnumber = {CERN-EP-2017-324}
 }
 @article{Adam:2016dau,
-	title        = {{Multiplicity dependence of charged pion, kaon, and (anti)proton production at large transverse momentum in p--Pb collisions at $\mathbf{\sqrt{{\textit s}_{\rm NN}}}$ = 5.02 TeV}},
+	title        = {{Multiplicity dependence of charged pion, kaon, and (anti)proton production at large transverse momentum in p--Pb collisions at $\mathbf{\sqrt{{\textit s}_{\rm NN}}} =$ 5.02 TeV}},
 	author       = {Adam, Jaroslav and others},
 	year         = 2016,
 	journal      = {Phys. Lett. B},
@@ -566,7 +566,7 @@
 	reportnumber = {CERN-EP-2016-003}
 }
 @article{Khachatryan:2016odn,
-	title        = {{Charged-particle nuclear modification factors in Pb--Pb and p--Pb collisions at $ \sqrt{s_{\mathrm{N}\;\mathrm{N}}}=5.02 $ TeV}},
+	title        = {{Charged-particle nuclear modification factors in Pb--Pb and p--Pb collisions at $ \sqrt{s_{\mathrm{NN}\;}}=5.02 $ TeV}},
 	author       = {Khachatryan, Vardan and others},
 	year         = 2017,
 	journal      = {JHEP},
@@ -614,7 +614,7 @@
 	reportnumber = {JLAB-THY-10-1228}
 }
 @article{Aaboud:2019mcw,
-	title        = {{Measurement of long-range two-particle azimuthal correlations in $Z$-boson tagged $pp$ collisions at $\sqrt{s}{=}8$ and 13 TeV}},
+	title        = {{Measurement of long-range two-particle azimuthal correlations in $Z$-boson tagged $pp$ collisions at $\sqrt{s}=$ 8 and 13 TeV}},
 	author       = {Aaboud, Morad and others},
 	year         = 2020,
 	journal      = {Eur. Phys. J. C},
@@ -693,13 +693,15 @@
 }
 
 @article{Brun:1994aa,
-    author = "Brun, Ren\'e and Bruyant, F. and Carminati, Federico and Giani, Simone and Maire, M. and McPherson, A. and Patrick, G. and Urban, L.",
-    title = "{GEANT Detector Description and Simulation Tool}",
-    reportNumber = "CERN-W5013, CERN-W-5013, W5013, W-5013",
-    doi = "10.17181/CERN.MUHF.DMJ1",
-    month = "10",
-    year = "1994"
+      author         = "Brun, René and Bruyant, F. and Carminati, Federico and
+                        Giani, Simone and Maire, M. and McPherson, A. and Patrick,
+                        G. and Urban, L.",
+      title          = "{GEANT Detector Description and Simulation Tool}",
+      year           = "1994",
+      reportNumber   = "CERN-W5013, CERN-W-5013, W5013, W-5013",
+      SLACcitation   = "%%CITATION = CERN-W5013;%%"
 }
+
 @article{Abelev:2014ffa,
 	title        = {{Performance of the ALICE Experiment at the CERN LHC}},
 	author       = {Abelev, Betty and others},
@@ -817,7 +819,7 @@
 	reportnumber = {CERN-PH-TH-2011-297}
 }
 @article{Acharya:2018eat,
-	title        = {{Charged jet cross section and fragmentation in proton-proton collisions at $\sqrt{s}$ = 7 TeV}},
+	title        = {{Charged jet cross section and fragmentation in proton-proton collisions at $\sqrt{s} =$ 7 TeV}},
 	author       = {Acharya, Shreyasi and others},
 	year         = 2019,
 	journal      = {Phys. Rev. D},
@@ -919,7 +921,7 @@
 	reportnumber = {CERN-PH-EP-2011-059, CMS-QCD-10-010}
 }
 @article{PHENIX:2006gto,
-	title        = {{Jet properties from dihadron correlations in p+p collisions at $\sqrt{s}$ = 200~GeV}},
+	title        = {{Jet properties from dihadron correlations in p+p collisions at $\sqrt{s} =$ 200~GeV}},
 	author       = {Adler, S. S. and others},
 	year         = 2006,
 	journal      = {Phys. Rev. D},
@@ -1039,7 +1041,7 @@
 	archiveprefix = {arXiv}
 }
 @article{Bleicher:1999xi,
-	title        = {{Relativistic hadron hadron collisions in the ultrarelativistic quantum molecular dynamics model}},
+	title        = {{Relativistic hadron-hadron collisions in the ultrarelativistic quantum molecular dynamics model}},
 	author       = {Bleicher, M. and others},
 	year         = 1999,
 	journal      = {J. Phys. G},
@@ -1251,7 +1253,7 @@
 	reportnumber = {PUPT-2358}
 }
 @article{ATLAS:2017rtr,
-	title        = {{Measurement of long-range multiparticle azimuthal correlations with the subevent cumulant method in $pp$ and $p + Pb$ collisions with the ATLAS detector at the CERN Large Hadron Collider}},
+	title        = {{Measurement of long-range multiparticle azimuthal correlations with the subevent cumulant method in $pp$ and $p +$Pb collisions with the ATLAS detector at the CERN Large Hadron Collider}},
 	author       = {Aaboud, Morad and others},
 	year         = 2018,
 	journal      = {Phys. Rev. C},
@@ -1418,7 +1420,7 @@
 	primaryclass = {hep-ph}
 }
 @article{ALICE:2018hza,
-	title        = {{Transverse momentum spectra and nuclear modification factors of charged particles in Xe-Xe collisions at $\sqrt{s_{\rm NN}} = 5.44$ TeV}},
+	title        = {{Transverse momentum spectra and nuclear modification factors of charged particles in Xe--Xe collisions at $\sqrt{s_{\rm NN}} = 5.44$ TeV}},
 	author       = {Acharya, Shreyasi and others},
 	year         = 2019,
 	journal      = {Phys. Lett. B},
@@ -1525,7 +1527,7 @@
 @article{PHENIX:2018hho,
     author = "Adare, A. and others",
     collaboration = "PHENIX",
-    title = "{Pseudorapidity Dependence of Particle Production and Elliptic Flow in Asymmetric Nuclear Collisions of $p+$Al, $p+$Au, $d+$Au, and $^{3}$He$+$Au at $\sqrt{s_{_{\rm NN}}}=200$ GeV}",
+    title = "{Pseudorapidity Dependence of Particle Production and Elliptic Flow in Asymmetric Nuclear Collisions of $p+$Al, $p+$Au, $d+$Au, and $^{3}$He$+$Au at $\sqrt{s_{\rm NN}}=200$ GeV}",
     eprint = "1807.11928",
     archivePrefix = "arXiv",
     primaryClass = "nucl-ex",
@@ -1661,7 +1663,7 @@
 @article{ALICE:2020swj,
     author = "Acharya, Shreyasi and others",
     collaboration = "ALICE",
-    title = "{Pseudorapidity distributions of charged particles as a function of mid- and forward rapidity multiplicities in pp collisions at $\sqrt{s}$~=~5.02, 7 and 13 TeV}",
+    title = "{Pseudorapidity distributions of charged particles as a function of mid- and forward rapidity multiplicities in pp collisions at $\sqrt{s}=$~5.02, 7 and 13 TeV}",
     eprint = "2009.09434",
     archivePrefix = "arXiv",
     primaryClass = "nucl-ex",
@@ -1714,7 +1716,7 @@
 @article{ALICE:2017svf,
     author = "Acharya, Shreyasi and others",
     collaboration = "ALICE",
-    title = "{Constraints on jet quenching in p-Pb collisions at $\mathbf{\sqrt{s_{NN}}}$ = 5.02 TeV measured by the event-activity dependence of semi-inclusive hadron-jet distributions}",
+    title = "{Constraints on jet quenching in p--Pb collisions at $\mathbf{\sqrt{s_{NN}}} =$ 5.02 TeV measured by the event-activity dependence of semi-inclusive hadron-jet distributions}",
     eprint = "1712.05603",
     archivePrefix = "arXiv",
     primaryClass = "nucl-ex",
