Updates from Overleaf

--- a/paper.bib
+++ b/paper.bib
@@ -693,13 +693,16 @@
 }
 
 @article{Brun:1994aa,
-      author         = "Brun, René and Bruyant, F. and Carminati, Federico and
-                        Giani, Simone and Maire, M. and McPherson, A. and Patrick,
-                        G. and Urban, L.",
-      title          = "{GEANT Detector Description and Simulation Tool}",
-      year           = "1994",
-      reportNumber   = "CERN-W5013, CERN-W-5013, W5013, W-5013",
-      SLACcitation   = "%%CITATION = CERN-W5013;%%"
+    author = "Brun, René and Bruyant, F and Carminati, Federico and Giani, Simone and Maire, M and McPherson, A and Patrick, G and Urban, L",
+    title = "{GEANT: Detector Description and Simulation Tool; Oct 1994}",
+    publisher     = "CERN",
+    address       = "Geneva",
+    series        = "CERN Program Library",
+    year          = "1993",
+    url           = "http://cds.cern.ch/record/1082634",
+    journal       = "CERN-W5013",
+    note          = "Long Writeup W5013",
+    doi           = "10.17181/CERN.MUHF.DMJ1",
 }
 
 @article{Abelev:2014ffa,
@@ -758,14 +761,7 @@
 	slaccitation = {%%CITATION = NUCL-EX/0501025;%%}
 }
 
-@article{ALICE-PUBLIC-2016-002,
-      collaboration = "ALICE",
-      title         = "{ALICE luminosity determination for pp collisions at
-                       $\sqrt{s}=13$ TeV}",
-      year          = "2016",
-      reportNumber  = "ALICE-PUBLIC-2016-002",
-      url           = "https://cds.cern.ch/record/2160174",
-}
+
 @article{ALICE-PUBLIC-2016-002,
       title         = "{ALICE luminosity determination for pp collisions at $\sqrt{s_{\rm NN}} = 13$ TeV}",
       collaboration = "ALICE",
@@ -777,12 +773,6 @@
       author        = "J. Adam and others"
 }
 
-@article{ALICE:2016nst,
-    collaboration = "ALICE",
-    title = "{ALICE luminosity determination for pp collisions at $\sqrt{s}=13$ TeV}",
-    reportNumber = "ALICE-PUBLIC-2016-002",
-    year = "2016"
-}
 @article{Santoro2009:ALICESPD,
 	title        = {{The ALICE Silicon Pixel Detector: Readiness for the first proton beam}},
 	author       = {Santoro, R. and others},
@@ -1618,8 +1608,10 @@
 @article{ALICE-PUBLIC-2017-005,
       collaboration = "ALICE",
       title         = "{The ALICE definition of primary particles}",
-      year          = "2017",
       url           = "https://cds.cern.ch/record/2270008",
+      reportNumber = "ALICE-PUBLIC-2017-005",
+      journal      = "ALICE-PUBLIC-2017-005",
+      year = "2017"
 }
 
 @article{ALICE:2022wpn,
