--- a/sec_ana.tex
+++ b/sec_ana.tex
@@ -16,7 +16,7 @@ The ITS is a silicon tracker with six layers of silicon sensors. The two innermo
 %Usage of detectors: triggers, PV, tracking etc
 The V0 provides a minimum bias (MB) trigger in both pp and p--Pb collisions and an additional high-multiplicity trigger in pp collisions. The MB trigger is obtained by a time coincidence of V0A and V0C signals. 
 Amplitudes of V0A and V0C signals are proportional to charged-particle multiplicity, and their sum is denoted as V0M.  
-The high-multiplicity trigger in pp collisions requires the V0M signal to exceed five times the mean value measured in MB collisions, selecting the 0.1\% of MB events with the largest V0M multiplicity. The centrality in p--Pb collisions is determined using the V0A detector, which is located in the Pb-going direction. The analyzed data samples of MB and high-multiplicity pp events at $\sqrt{s}=$~13 TeV correspond to integrated luminosities ($\mathcal{L}_\mathrm{int}$) of about 19 nb$^{-1}$ and 11 pb$^{-1}$, respectively~\cite{ALICE:2016nst}. In p--Pb collisions at $\sqrt{s_\mathrm{NN}} = 5.02$ TeV, the corresponding integrated luminosity is $\mathcal{L}_\mathrm{int} \sim 0.3$ nb$^{-1}$. 
+The high-multiplicity trigger in pp collisions requires the V0M signal to exceed five times the mean value measured in MB collisions, selecting the 0.1\% of MB events with the largest V0M multiplicity. The centrality in p--Pb collisions is determined using the V0A detector, which is located in the Pb-going direction. The analyzed data samples of MB and high-multiplicity pp events at $\sqrt{s}=$~13 TeV correspond to integrated luminosities ($\mathcal{L}_\mathrm{int}$) of about 19 nb$^{-1}$ and 11 pb$^{-1}$, respectively~\cite{ALICE-PUBLIC-2016-002}. In p--Pb collisions at $\sqrt{s_\mathrm{NN}} = 5.02$ TeV, the corresponding integrated luminosity is $\mathcal{L}_\mathrm{int} \sim 0.3$ nb$^{-1}$. 
 
 Positions of primary vertices are reconstructed from signals measured by the SPD. The reconstructed primary vertices are required to be within 8 cm of the nominal interaction point along the beam direction. 
 Pileup events are identified as events with multiple reconstructed primary vertices. These events are rejected if the distance between any of the vertices to the main primary vertex is greater than 0.8 cm.
@@ -26,7 +26,7 @@ Charged-particle tracks are reconstructed using the combined information from th
 %Charged-particle tracks are reconstructed using the combined information of the ITS and TPC in a uniform magnetic field of 0.5 T along the beam direction provided by the L3 solenoidal magnet. 
 For charged particles emitted from a vertex located within $|z_\mathrm{vtx}|<8$ cm along the beam direction, the ITS and TPC provide a pseudorapidity coverage of $|\eta|<1.4$ and 0.9, respectively. Both detectors have full coverage in azimuth. They are placed in a uniform magnetic field of 0.5 T that is oriented along the beam direction.
 
-The charged-particle-selection criteria are optimized to ensure a uniform efficiency over the midrapidity range $|\eta|<0.9$ to mitigate the effects of small areas where some ITS layers are inactive in both collision systems. The selected sample of tracks consists of two classes. Tracks in the first class must have at least one hit in the SPD. Tracks of the second class do not have any hits in the SPD, but their origin is constrained to the primary vertex~\cite{ALICE:2012eyl}. 
+The charged-particle selection criteria are optimized to ensure a uniform efficiency over the midrapidity range $|\eta|<0.9$ to mitigate the effects of small areas where some ITS layers are inactive in both collision systems. The selected sample of tracks consists of two classes. Tracks in the first class must have at least one hit in the SPD. Tracks of the second class do not have any hits in the SPD, but their origin is constrained to the primary vertex~\cite{ALICE:2012eyl}. 
 Charged-particle tracks are reconstructed down to a transverse momentum ($\pt$) of 0.15 GeV/$c$ with an efficiency of approximately 65\%~\cite{Ivanov:2006yra}. The efficiency increases to 80\% for particles with $\pt>1$ GeV/$c$. The $\pt$ resolution is approximately 1\% for primary charged particles~\cite{ALICE-PUBLIC-2017-005} with $\pt<$ 1~GeV/$c$, and it linearly increases to 6\% at $\pt\sim$ 50~GeV/$c$ in pp collisions and 10\% in p--Pb collisions~\cite{ALICE:2018vuu}.
 
 
@@ -66,7 +66,7 @@ Y(\Delta\varphi) = \frac{1}{N_{\mathrm{trig}}} \frac{\mathrm{d} N_{\mathrm{pair}
 \end{eqnarray}
 
 where the factor $\delta_{\Delta\eta}=$~0.4 normalizes the obtained per-trigger yield per unit of pseudorapidity.
-The per-trigger yields are extracted for the considered $p_{\mathrm{T,trig}}$ and $p_{\mathrm{T,assoc}}$ intervals in several multiplicity classes: 0--0.1\%, 1--5\%, 5--20\%, 20--60\%, and 60--100\% in pp collisions, and 0--5\%, 5--10\%, 10--20\%, 20--40\%, 40--60\%, and 60--100\% in p--Pb collisions. The conversion of the measured forward event multiplicities to the charge-particle multiplicities $N_{\mathrm{ch}}$ in the midrapidity ($|\eta|<0.5$) used in Sec.~\ref{sec:results} is based on Refs.~\cite{ALICE:2020swj}.
+The per-trigger yields are extracted for the considered $p_{\mathrm{T,trig}}$ and $p_{\mathrm{T,assoc}}$ intervals in several multiplicity classes: 0--0.1\%, 1--5\%, 5--20\%, 20--60\%, and 60--100\% in pp collisions, and 0--5\%, 5--10\%, 10--20\%, 20--40\%, 40--60\%, and 60--100\% in p--Pb collisions. The conversion of the measured forward event multiplicities to the charge-particle multiplicities $N_{\mathrm{ch}}$ at midrapidity ($|\eta|<0.5$) used in Sec.~\ref{sec:results} is based on Ref.~\cite{ALICE:2020swj}.
 
 \subsection{Extraction of flow coefficients}
 
@@ -79,8 +79,8 @@ Y_{\rm{HM}}(\Delta\varphi) = G~(1 + 2v_{2,2}\cos(2\Delta\varphi) + 2v_{3,3}\cos(
 where $Y_{\rm{LM}}(\Delta\varphi)$ is the measured per trigger yield from low-multiplicity events. The normalization factor for the first three Fourier terms, which parameterize the long-range, flow-like correlation, is denoted as $G$. The scale factor $F$ compensates for the increased yield of away-side-jet hadrons in the analyzed multiplicity class relative to the low-multiplicity template that corresponds to the 60--100\% class~\cite{ALICE:2013tla,ALICE:2014mas}.
 The fit determines the scale factor $F$, pedestal $G$, and $v_{n,n}$ and is performed in various high-multiplicity classes as well as in different $p_\mathrm{T,trig}$ intervals. 
 This method assumes that $Y_{\rm{LM}}$ does not contain a near-side-peak structure that would originate from jet fragmentation or a near-side ridge.
-Further it is assumed that the shape of the away-side-peak structure remains the same when changing the multiplicity class.
-The first assumption is ensured using the selected low-multiplicity template which doesn't have a strong near-side-peak structure compared to the studied higher multiplicity-classes. The second assumption, which involves the modification of jet shapes, was tested by projecting the near-side jet peaks onto $\Delta\eta$. 
+Furthermore it is assumed that the shape of the away-side-peak structure remains the same when changing the multiplicity class.
+The first assumption is ensured using the selected low-multiplicity template which does not have a strong near-side-peak structure compared to the studied higher multiplicity-classes. The second assumption, which involves the modification of jet shapes, was tested by projecting the near-side jet peaks onto $\Delta\eta$. 
 %This projection did not reveal any strong dependence of the jet-peak shape on multiplicity class~\cite{LAKOMOV2017329}. However, 
 %The effect of the possible modification of the away-side jet yield on the result of the template fit was investigated by adjusting the away-side shape based on the observed differences between low- and high-multiplicity events. The effect on the extracted $v_2$ was found to be less than 1$\%$ in pp and p--Pb collisions for the kinematic selections used in this analysis. As for $v_3$, the maximum effect is about 3\% and 8$\%$ in pp and p--Pb collisions, respectively.  
 This modification of the jet shape is considered as one of the sources of systematic uncertainty and will be discussed in Sec.~\ref{sec:uncertainties}.
@@ -150,7 +150,7 @@ The flow coefficients, $v_{n}$, of the trigger particles, can be extracted from 
 v_{n}(p_{\rm{T,trig}}) = v_{n,n}(p_{\rm{T,trig}}, p_{\rm{T,assoc}}) / \sqrt{ v_{n,n}(p_{\rm{T,assoc}},p_{\rm{T,assoc}})},
 \end{eqnarray}
 where $v_{n,n}(p_{\rm{T,assoc}}, p_{\rm{T,assoc}})$ denote $v_{n,n}$ coefficients extracted using trigger and associated particles with $p_{\rm{T}}$ in the range 1--4~GeV/$c$. In the following sections, unless explicitly stated otherwise, $v_n$ will refer to $v_n(p_{\rm{T,trig}})$.
-Different event scale selections were investigated by selecting events that include a hard jet or a high-$\pt$ leading particle in midrapidity (i.e., the particle with the highest reconstructed $\pt$ inside the acceptance region in an event).
+Different event scale selections were investigated by selecting events that include a hard jet or a high-$\pt$ leading particle at midrapidity (i.e., the particle with the highest reconstructed $\pt$ inside the acceptance region in an event).
 This event scale was set by requiring a minimum $\pt$ of the leading track ($\ptlead$) or the reconstructed jet ($\ptjet$) at midrapidity~\cite{ALICE:2021nir}. The leading particle track was required to be within $|\eta|<0.9$ and $0<\varphi<2\pi$, and the jets were reconstructed with the anti-$k_{\rm{T}}$ algorithm~\cite{Cacciari:2008gp,Cacciari:2011ma}, with $R=0.4$ using charged particles only. Jet constituents were combined using the boost-invariant $\pt$ recombination scheme. The jets are selected in the full azimuth ($0<\varphi<2\pi$) and their pseudorapidity is constrained to $|\eta_\mathrm{jet}|<0.4$. The $\pt$ of jets $\ptjet$ is corrected for the underlying event density that is measured using the $k_{\rm{T}}$ algorithm with $R=$~0.2 following the procedure described in Ref.~\cite{Acharya:2018eat}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -207,15 +207,13 @@ Note that for the measurement of $Y^{\rm{near}}$, the low-multiplicity-interval 
 The systematic uncertainty resulting from matching a track reconstructed by the TPC and the corresponding signal in the ITS is estimated by evaluating the fraction of mismatches in real data using simulations. Primary tracks have a higher matching efficiency than secondary tracks produced far from the interaction point or in interactions with detector material. To address the effect of different fractions of primary and secondary tracks in data and simulations on the matching efficiency, particle abundances in the simulation are re-weighted to reflect real data. This resulted in modified matching efficiency.
 %The estimated uncertainties of $Y^{\rm{near}}$ and $Y^{\rm{away,LM}}$ are 2.0--3.0\%.
 
-The systematic uncertainty arising from the efficiency correction is estimated by performing a closure test, where two correlation functions are compared. The first correlation function is constructed using true information from the Monte Carlo samples described in Sec.~\ref{sec:experiment}. This provides a baseline for the expected correlation function. The second correlation function is constructed using reconstructed tracks which are corrected for tracking efficiency. By comparing the two correlation functions, it is possible to estimate the magnitude of the uncertainty introduced by the correction. 
+The systematic uncertainty arising from the efficiency correction is estimated by performing a closure test, where two correlation functions are compared. The first correlation function is constructed using true information from the Monte Carlo samples described in Sec.~\ref{sec:experiment}. This provides a baseline for the expected correlation function. The second correlation function is constructed using reconstructed tracks corrected for tracking efficiency. By comparing the two correlation functions, it is possible to estimate the magnitude of the uncertainty introduced by the correction. 
 %The estimated uncertainty is 0.1--5.0\%.
 
 Due to the limited $\eta$ acceptance of the TPC, non-flow contributions, mainly originating from fragmentation of jets, affect the flow measurement. As the shape of short-range correlations, mostly attributed to jets, is getting broader with decreasing $\pt$, the systematic uncertainty from $\eta$ acceptance significantly depends on $p_{\rm{T}}$. To estimate the related uncertainty, the long range $\Delta\varphi$ correlations are measured for an extended $\Delta\eta$ gap, the default size of $\Delta\eta$ gap 1.6 is increased to 1.7.
 %The estimated uncertainties of $F$, $v_{2}$, and $v_{3}$ are 0.1--5.0\%.
 
-Finally, it is worth considering the possible impact of the multiplicity dependence of the jet-shape modifications discussed in Sec.~\ref{sec:ana}. This is studied by examining the shape modification of the jet-peak distribution in the near-side region as a function of $\Delta\eta$ and  multiplicity. The observed change in the width is used to estimate the possible effect on the long-range, per-trigger-yield distribution as a function of $\Delta\varphi$. The effect on $v_2$ is found to be less than 1$\%$ in pp and p--Pb collisions for the kinematic ranges analyzed. The effect on $v_3$ is found to be less than 8\% in p--Pb collisions. These values are included in the total systematic uncertainty. However, it is important to note that other analyses with different kinematic ranges should also perform a similar check to assess the systematic uncertainty associated with this effect. It is possible that this effect may not always be as small as in our analysis.
-
-
+Finally, it is worth considering the possible impact of the multiplicity dependence of the jet-shape modifications discussed in Sec.~\ref{sec:ana}. This is studied by examining the shape modification of the jet-peak distribution in the near-side region as a function of $\Delta\eta$ and multiplicity. The observed change in the width is used to estimate the possible effect on the long-range, per-trigger-yield distribution as a function of $\Delta\varphi$. The effect on $v_2$ is found to be less than 1$\%$ in pp and p--Pb collisions for the kinematic ranges analyzed. The effect on $v_3$ is found to be less than 8\% in p--Pb collisions. These values are included in the total systematic uncertainty. However, it is important to note that other analyses with different kinematic ranges should also perform a similar check to assess the systematic uncertainty associated with this effect. It is possible that this effect may not always be as small as in our analysis.
 
 
 
