--- a/sec_results.tex
+++ b/sec_results.tex
@@ -6,8 +6,8 @@
 
 \begin{figure}[!b]
 	\centering
-	\hspace{-3em}\includegraphics[width=0.9\textwidth]{figures/FIG4_vn_pppPb.pdf} %<--- keep the scale at 0.9 to match with other figures
-	\caption{The magnitude of $v_2$ (left) and $v_3$ (right) as a function of $p_\mathrm{T}$ for the 0--0.1\% multiplicity interval in pp collisions at $\sqrt{s}=13$~TeV and 0--20\% in p--Pb collisions at $\sqrt{s_\mathrm{NN}} = 5.02$~TeV. The boxes around the data points represents the estimated systematic uncertainty and the error bars corresponds to the statistical errors.}
+	\hspace{-4.5em}\includegraphics[width=0.92\textwidth]{figures/FIG4_vn_pppPb.pdf} %<--- keep the scale at 0.9 to match with other figures
+	\caption{The magnitude of $v_2$ (left) and $v_3$ (right) as a function of $p_\mathrm{T}$ for the 0--0.1\% multiplicity interval in pp collisions at $\sqrt{s}=13$~TeV and 0--20\% in p--Pb collisions at $\sqrt{s_\mathrm{NN}} = 5.02$~TeV. The boxes around the data points represent the estimated systematic uncertainty and the error bars correspond to the statistical errors.}
 	\label{fig:vn}
 \end{figure}
 %python3 Fig2_vn_ppPb.py
@@ -26,7 +26,7 @@ These results are comparable to those obtained by ATLAS in different multiplicit
 	\label{fig:v2mult}
 \end{figure}
 
-Figure~\ref{fig:v2mult} presents the magnitudes of $v_2$ and $v_3$, as a function of charged-particle multiplicity in the midrapidity for both pp collisions at $\sqrt{s}=13$ TeV and p--Pb collisions at $\sqrt{s_\mathrm{NN}}=5.02$ TeV. As in Fig.~\ref{fig:vn}, the $\Delta\eta$ gap is $1.6<|\Delta\eta|<1.8$ and $v_2$ is measured in $1<p_{\mathrm{T}}<4\,\mathrm{GeV}/c$ for both collision systems. Additionally, the corresponding results for pp collisions at $\sqrt{s}=13$ TeV with $1<p_{\mathrm{T}}<2$ GeV/$c$ are presented. First, it is observed that the magnitude of $v_n$ increases with increasing multiplicity for both collision systems and $p_\mathrm{T}$-ranges. Second, $v_2$ in p--Pb is higher than in pp collisions in the measured multiplicity range. These two observations are compatible with previous results from Refs.~\cite{ATLAS:2015hzw,ATLAS:2016yzd, Khachatryan:2015lva}. There is no significant difference between the two collision systems when considering the $v_3$ dependence on multiplicity as shown on the Right-hand-side panel of Fig.~\ref{fig:v2mult}. The $v_3$ measurements exhibit a comparable, subtle dependence on multiplicity, with higher values observed in collisions with greater particle multiplicities.
+Figure~\ref{fig:v2mult} presents the magnitudes of $v_2$ and $v_3$, as a function of charged-particle multiplicity at midrapidity for both pp collisions at $\sqrt{s}=13$ TeV and p--Pb collisions at $\sqrt{s_\mathrm{NN}}=5.02$ TeV. As in Fig.~\ref{fig:vn}, the $\Delta\eta$ gap is $1.6<|\Delta\eta|<1.8$ and $v_2$ is measured in $1<p_{\mathrm{T}}<4\,\mathrm{GeV}/c$ for both collision systems. Additionally, the corresponding results for pp collisions at $\sqrt{s}=13$ TeV with $1<p_{\mathrm{T}}<2$ GeV/$c$ are presented. First, it is observed that the magnitude of $v_n$ increases with increasing multiplicity for both collision systems and $p_\mathrm{T}$-ranges. Second, $v_2$ in p--Pb is higher than in pp collisions in the measured multiplicity range. These two observations are compatible with previous results from Refs.~\cite{ATLAS:2015hzw,ATLAS:2016yzd, Khachatryan:2015lva}. There is no significant difference between the two collision systems when considering the $v_3$ dependence on multiplicity as shown on the right-hand-side panel of Fig.~\ref{fig:v2mult}. The $v_3$ measurements exhibit a comparable subtle dependence on multiplicity, with higher values observed in collisions with greater particle multiplicities.
 For the two different $p_\mathrm{T}$ intervals presented for the pp collisions, the $v_2$ in $1.0<p_\mathrm{T}<4.0$ GeV/$c$ shows a hint of larger magnitude than the $v_2$ in $1.0<p_\mathrm{T}<$~2.0~GeV/$c$. The difference in magnitude is significant only in the highest multiplicity point. 
 This agrees with what is observed in Fig.~\ref{fig:vn}, where the $v_2$ magnitude has its largest value in $2.5<p_\mathrm{T}<$~3.0~GeV/$c$. It is found that for the considered $p_\mathrm{T}$ selections, the observed multiplicity dependencies differ only marginally. 
 It is worth noting that the results presented from pp and p--Pb collisions were obtained from two different beam energies. In Ref.~\cite{ATLAS:2016yzd}, it was found that the magnitudes of $v_2$ and $v_3$ in pp collisions between 13 and 5.02 TeV show no significant variation with center-of-mass energy.
@@ -40,7 +40,7 @@ It is worth noting that the results presented from pp and p--Pb collisions were 
 \end{figure}    
 
 Figure~\ref{fig:LPjet23} presents the extracted magnitude of $v_2$ and $v_3$ as a function of the minimum $p_\mathrm{T}$ of the leading particle $\it{p}^{\rm{LP}}_{\rm{T,min}}$ and that of the jet ($\it{p}^{\rm{jet}}_{\rm{T,min}}$) as introduced in Sec.~\ref{sec:intro}. 
-The results are presented for the 0–0.1\% multiplicity class of pp collisions at $\sqrt{s}= 13$ TeV and for the two different pT-ranges.
+The results are presented for the 0–0.1\% multiplicity class of pp collisions at $\sqrt{s}= 13$ TeV and for the two different $p_\mathrm{T}$-ranges.
 To reduce the impact of the detector edge effects on the jet measurements, the jet axes are required to have a pseudorapidity $|\eta_\mathrm{jet}|<0.4$, following a similar selection as in Refs.~\cite{CDF:2001onq, ATLAS:2014riz, CMS:2015jdl}. The $v_2$ and $v_3$ values for both $p_\mathrm{T}$ ranges do not show any dependence on event-scale selection within the uncertainties. This finding is consistent with the results of the ridge yields~\cite{ALICE:2021nir} and $v_{2}$ measurements with a tagged $Z$ boson from the ATLAS collaboration~\cite{Aaboud:2019mcw}. These results suggest that the presence of a hard-scattering process does not significantly change the long-range correlation involving soft particles.
 However, the presented measurements are only limited to the low $\it{p}^{\rm{jet}}_{\rm{T}}$. Future measurements with multi-jet events at midrapidity with higher $Q^2$ reach can shed more light on the expected impact parameter dependence~\cite{Sjostrand:1986ep,Frankfurt:2003td,Frankfurt:2010ea}.
 
@@ -57,8 +57,8 @@ The blue and red markers represent the measured p--Pb and pp data, respectively.
 
 In this section, the results are compared to various model calculations.
 The results from p--Pb collisions are compared with hydrodynamic calculations using the parameterization from an improved global
-Bayesian analysis. The analysis involves new sophisticated collective flow observables as obtained from two different beam energies in Pb--Pb collisions~\cite{Parkkila:2021yha}, constraining the initial conditions and transport properties of the QGP. This hydrodynamic model, {T\raisebox{-.5ex}{R}ENTo}+iEBE-VISHNU, consists of the {T\raisebox{-.5ex}{R}ENTo} model~\cite{Moreland:2014oya} to simulate the initial condition, which is connected with a free streaming to a 2+1 dimensional causal hydrodynamic model VISH2+1~\cite{Shen:2014vra}. The evolution is continued after hadronization with a hadronic cascade model (UrQMD)~\cite{Bass:1998ca,Bleicher:1999xi}.
- %The initial conditions, the shear viscosity to entropy density ratio $\eta/s(T)$, the bulk viscosity $\zeta/s(T)$, and other free parameters of the hybrid model are extracted in a global Bayesian analysis.
+Bayesian analysis. The analysis involves new sophisticated collective flow observables as obtained from two different beam energies in Pb--Pb collisions~\cite{Parkkila:2021yha}, constraining the initial conditions and transport properties of the QGP. This hydrodynamic model, {T\raisebox{-.5ex}{R}ENTo}+iEBE-VISHNU, consists of the {T\raisebox{-.5ex}{R}ENTo} model~\cite{Moreland:2014oya} to simulate the initial condition, which is connected with a free streaming to a 2+1 dimensional causal hydrodynamic model VISH2+1~\cite{Shen:2014vra}. The evolution is continued after hadronization with a hadronic cascade model (UrQMD)~\cite{Bass:1998ca,Bleicher:1999xi}. 
+%The initial conditions, the shear viscosity to entropy density ratio $\eta/s(T)$, the bulk viscosity $\zeta/s(T)$, and other free parameters of the hybrid model are extracted in a global Bayesian analysis.
 A model calculation is performed using the best-fit parameterization for transport coefficients selected based on maximum a posteriori (MAP) for Pb--Pb collisions at $\sqrt{s_{\text{NN}}}=5.02$~TeV. Two different MAP values are used for the calculations. They are based on Ref.~\cite{Parkkila:2021yha} and Ref.~\cite{Bernhard:2016tnd} and in Fig. 7 they
 are labeled MAP(2021) and MAP(QM2018), respectively.
  The parameterization for the initial conditions, which include a sub-nucleon structure with six constituent partons per nucleon ($m=6$), is taken from a model calibration with additional p--Pb data~\cite{Moreland:2018gsh}. All kinematic selections, such as the transverse momentum and pseudorapidity intervals, are matched to the data reported in this article. The flow coefficients in the hydrodynamic calculation are extracted with the two-particle cumulant method, as the {T\raisebox{-.5ex}{R}ENTo}+iEBE-VISHNU does not contain any non-flow.
@@ -71,7 +71,7 @@ This model describes well the multiplicity dependence of $v_2$ in p--Pb collisio
 For $v_3$, the model accurately describes the magnitudes and multiplicity dependence across the measured multiplicity ranges. The magnitudes of $v_3$ are slightly smaller in pp collisions than in p--Pb collisions according to the calculations, which agrees with the data within the uncertainties. The level of agreement between data and the IP Glasma model calculations is found to be similar to the results reported in Ref.~\cite{Acharya:2019vdf}.
 
 Finally, the results are compared with the GubsHyd model, a semi-analytical model based on the analytical Gubser solution to hydrodynamic equations~\cite{Gubser:2010ze,Gubser:2010ui}, known as Gubser flow. In Gubser flow, the initial state of conformal matter is linearly perturbed by an initial elliptic shape. The model is employed to shed light on the possible sources of the observed discrepancy between more realistic models mentioned above and the measurements in pp collisions~\cite{Taghavi:2019mqz}. Instead of modeling the initial entropy density in this model, as it is typically done in T$_{\text{R}}$ENTo or IP-Glasma, the initial state fluctuation is modeled directly. It assumes that proton ellipticity $\epsilon_{2}$ and RMS radius $r_{\text{rms}}$ fluctuate independently. These fluctuations are described by Gaussian probability distributions, which have widths $\sigma_{\epsilon}$
- and $\sigma_{r}$, respectively. The multiplicity dependence of two-particle correlation functions' $v_2\{2\}$ depends on $\sigma_{r}$ and  $\chi\sigma_{\epsilon}$, where the coefficient $\chi$ encapsulates a correction for idealizations used in GubsHyd, including the absence of dissipation effects. The values of $\sigma_{r}$ and  $\chi\sigma_{\epsilon}$, were obtained by comparing the model with data. Since no non-flow effect is considered in the calculation, $v_2\{2\}$ is comparable with the flow measurements in the present study. The calculations for two sets of parameters are compared
+ and $\sigma_{r}$, respectively. The multiplicity dependence of the $v_2\{2\}$ of two-particle correlation functions depends on $\sigma_{r}$ and  $\chi\sigma_{\epsilon}$, where the coefficient $\chi$ encapsulates a correction for idealizations used in GubsHyd, including the absence of dissipation effects. The values of $\sigma_{r}$ and  $\chi\sigma_{\epsilon}$, were obtained by comparing the model with data. Since no non-flow effect is considered in the calculation, $v_2\{2\}$ is comparable with the flow measurements in the present study. The calculations for two sets of parameters are compared
 to data in Fig.~\ref{fig:vnmult_model}. The “param0” parameterization is based on the prediction proposed in Ref.~\cite{Taghavi:2019mqz} that $\chi \sigma_{\epsilon} =$ 0.097 and $\sigma_{r} =$ 0.4 fm. The other parameterizations “param1” and “param2” employ different $\chi \sigma_{\epsilon}$  and $\sigma_{r}$ values. The model captures the multiplicity dependence of $v_2$ well.
 
 In summary, the measured value of $v_{2}$ decreases with decreasing multiplicity in both pp and p--Pb collisions. This trend is also predicted by GubsHyd model calculations (Refs.~\cite{Taghavi:2019mqz} and~\cite{Weller:2017tsr}). Interestingly, the opposite trend is observed for the IP-GLASMA+MUSIC+UrQMD hydrodynamic calculations of $v_2$, where the value decreases with increasing charged-particle multiplicity~\cite{Schenke:2020mbo}.
